--- a/backend/public/css/date-styles.css
+++ b/backend/public/css/date-styles.css
@@ -95,6 +95,14 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
+.spam-msg {
+  margin-top: 1.7rem;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #10b981;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
 
 
 .btn-yes:hover {
